fix: Correct invalid Gemini model name to gemini-1.5-flash and increase timeout

--- a/vercel.json
+++ b/vercel.json
@@ -1,63 +1,7 @@
 {
-    "version": 2,
-    "builds": [
-        {
-            "src": "api/**/*.js",
-            "use": "@vercel/node"
-        },
-        {
-            "src": "*.html",
-            "use": "@vercel/static"
-        },
-        {
-            "src": "*.css",
-            "use": "@vercel/static"
-        },
-        {
-            "src": "*.js",
-            "use": "@vercel/static"
-        },
-        {
-            "src": "images/**",
-            "use": "@vercel/static"
+    "functions": {
+        "api/**/*.js": {
+            "maxDuration": 60
         }
-    ],
-    "routes": [
-        {
-            "src": "/api/search-cities",
-            "dest": "/api/search-cities.js"
-        },
-        {
-            "src": "/api/generate-itinerary",
-            "dest": "/api/generate-itinerary.js"
-        },
-        {
-            "src": "/api/credits",
-            "dest": "/api/credits.js"
-        },
-        {
-            "src": "/api/webhook/latpeed",
-            "dest": "/api/webhook/latpeed.js"
-        },
-        {
-            "src": "/(.*\\.css)",
-            "dest": "/$1"
-        },
-        {
-            "src": "/(.*\\.js)",
-            "dest": "/$1"
-        },
-        {
-            "src": "/(.*\\.html)",
-            "dest": "/$1"
-        },
-        {
-            "src": "/images/(.*)",
-            "dest": "/images/$1"
-        },
-        {
-            "src": "/",
-            "dest": "/index.html"
-        }
-    ]
+    }
 }
